# devops_course_2022

./: data_types.py  design_specs_higher_lower.txt  pypassport_generator.py  pyproject.toml  setup.cfg  students_and_teachers_classes_and_other_tasks.py  task_1.py  task_1.py.txt  treasure_island_game.py
.github/workflows/: python-package-conda.yml  python-publish_test.yml
higher_lower_task/: Dockerfile  design_spec.txt  main.py  result_documentation.txt  user_manual.txt
